Implementa caso de sucesso em pesquisa por cep, com tela de detalhes de um cep

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
   </head>
 
   <body>
+    <nav>
+        <h1>Busca por CEP</h1>
+    </nav>
     <main class="container mx-auto mt-28 px-5 flex">
       <%= yield %>
     </main>
