Implementa teste para um cep que não existe na base de dados da API

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
         <h1>Busca por CEP</h1>
     </nav>
     <main class="container mx-auto mt-28 px-5 flex">
+      <%= notice %>
       <%= yield %>
     </main>
   </body>
