Implementa teste para um cep inválido e aplica máscara em campo de pesquisa

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,19 @@
 <%= form_with url: root_path, method: :get do |f| %>
     <div>
         <%= f.label :cep, 'Insira um CEP' %>
-        <%= f.number_field :cep %>
+        <%= f.text_field :cep, maxlength: '9', id: 'cep' %>
     </div>
     <%= f.submit 'Pesquisar' %>
 <% end %>
+
+<script>
+    document.getElementById('cep').addEventListener('input', function(e) {
+        let value = e.target.value.replace(/\D/g, ''); 
+
+        if (value.length > 5) {
+        value = value.replace(/^(\d{5})(\d)/, '$1-$2');
+        }
+
+        e.target.value = value; 
+    });
+</script>
