--- a/app/views/cep_stats/show.html.erb
+++ b/app/views/cep_stats/show.html.erb
@@ -1,8 +1,19 @@
-<h2><%= @cep_stat.cep %></h2>
-<p><%= @cep_stat.address %></p>
+<div class="bg-white rounded-lg mt-4 w-3/5 text-center mx-auto py-7">
+    <h2 class="text-4xl font-bold text-gray-800"><%= @cep_stat.cep %></h2>
+    <p class="text-sm">CEP</p>
 
-<p>Bairro: <%= @cep_stat.district%></p>
-<p>Cidade: <%= @cep_stat.city %></p>
-<p>Estado: <%= @cep_stat.state %></p>
-<p>DDD: <%= @cep_stat.ddd %></p>
-<p>Coord.: <%= "(#{@cep_stat.latitude}, #{@cep_stat.longitude})"%></p>
+    <div class="flex justify-center mt-4 mb-2">
+        <p class="w-1/2 text-right mr-5"><b class="font-bold">Rua: </b><%= @cep_stat.address %></p>
+        <p class="w-1/2 text-left ml-5"><b class="font-bold">Bairro:</b> <%= @cep_stat.district%></p>
+    </div>
+    <div class="flex justify-center mb-2">
+        <p class="w-1/2 text-right mr-5"><b class="font-bold">Cidade</b>: <%= @cep_stat.city %></p>
+        <p class="w-1/2 text-left ml-5"><b class="font-bold">Estado:</b> <%= @cep_stat.state %></p>
+    </div>
+    <div class="flex justify-center mb-7">
+        <p class="w-1/2 text-right mr-5"><b class="font-bold">DDD:</b> <%= @cep_stat.ddd %></p>
+        <p class="w-1/2 text-left ml-5"><b class="font-bold">Coord. :</b> <%= "(#{@cep_stat.latitude}, #{@cep_stat.longitude})"%></p>
+    </div>
+
+    <%= link_to 'Voltar para a tela inicial', root_path, class: 'px-4 py-2 bg-rose-950 rounded-lg text-white'%>
+</div>
