--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,15 @@
-<%= form_with url: root_path, method: :get do |f| %>
-    <div>
-        <%= f.label :cep, 'Insira um CEP' %>
-        <%= f.text_field :cep, maxlength: '9', id: 'cep' %>
-    </div>
-    <%= f.submit 'Pesquisar' %>
-<% end %>
+<div class="w-full self-center flex-grow flex flex-col justify-center">
+    <h1 class="text-center text-3xl font-bold text-gray-800 mb-5">Encontre todas as informações sobre o seu CEP de maneira rápida</h1>
+  
+    <%= form_with url: root_path, method: :get, class: 'flex flex-inline justify-center' do |f| %>
+        <div>
+            <%= f.label :cep, 'Insira um CEP' %>
+            <%= f.text_field :cep, maxlength: '9', id: 'cep', class: 'w-96 text-lg rounded-l-lg border-slate-300 focus:ring focus:ring-slate-500 focus:ring-opacity-25' %>
+        </div>
+        <%= f.submit 'Pesquisar', class: 'cursor-pointer px-4 bg-rose-950 rounded-r-lg text-white' %>
+    <% end %>
+  
+</div>
 
 <script>
     document.getElementById('cep').addEventListener('input', function(e) {
