--- a/app/views/cep_stats/most_searched.html.erb
+++ b/app/views/cep_stats/most_searched.html.erb
@@ -1,49 +1,52 @@
-<div class="w-1/2 bg-white rounded-lg p-4 mt-4 shadow-md flex flex-col" id="most-searched-for-all">
-    <h1 class="text-2xl text-center mb-3 font-bold text-gray-800">CEP's mais buscados</h1>
-    <% if @most_searched_cep_stats.any? %>
-        <table class="w-5/6 mx-auto table-auto border-collapse border border-slate-400">
+<div class="flex"> 
+    <div class="w-1/2 bg-white rounded-lg p-4 mt-4 shadow-md flex flex-col mr-2" id="most-searched-for-all">
+        <h1 class="text-2xl text-center mb-3 font-bold text-gray-800">CEP's mais buscados</h1>
+        <% if @most_searched_cep_stats.any? %>
+            <table class="w-5/6 mx-auto table-auto border-collapse border border-slate-400">
+                <thead>
+                    <tr class="bg-rose-950 text-white">
+                        <th class="border border-slate-300"><%= CepStat.human_attribute_name(:cep) %></th>
+                        <th class="border border-slate-300"><%= CepStat.human_attribute_name(:city) %></th>
+                        <th class="border border-slate-300"><%= CepStat.human_attribute_name(:state) %></th>
+                        <th class="border border-slate-300">Detalhes</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% @most_searched_cep_stats.each do |cep_stat| %>
+                        <tr class="bg-gray-50 hover:bg-slate-200">
+                            <td class="border-x border-slate-300 pl-3"><%= cep_stat.cep %></td>
+                            <td class="border-x border-slate-300 pl-3"><%= cep_stat.city %></td>
+                            <td class="border-x border-slate-300 pl-3"><%= cep_stat.state %></td>
+                            <td class="border-x border-slate-300 text-center pb-0.5">
+                                <%= link_to 'Visualizar', cep_stat_path(cep_stat.id), class: 'hover:border-b hover:border-black font-semibold' %>
+                            </td>
+                        </tr>
+                    <% end %>
+                </tbody>
+            </table>
+        <% else %>
+            <span class="w-3/4 mx-auto text-center py-2 border border-rose-950/50 rounded-lg bg-[#faf0f3]">Não há CEPs pesquisados</span>
+        <% end %>
+    </div>
+
+    <div class="w-1/2 bg-white rounded-lg p-4 mt-4 shadow-md flex flex-col ml-2" id="most-searched-by-state">
+        <h1 class="text-2xl text-center mb-3 font-bold text-gray-800">CEP's mais buscados por estado</h1>
+        <%= form_with class:'flex justify-center mb-4 mt-1' do |f| %>
+            <%= f.label :state, 'Estado', class: 'self-center mr-3' %>
+            <%= f.select :state, options_for_select(CepStat::STATES.map { |acronym, name| [name, acronym] }), {}, id: 'state',
+                class: 'w-2/5 text-sm rounded-lg border-slate-300 focus:ring focus:ring-slate-500 focus:ring-opacity-25' %>
+        <% end %>
+        <span id="message" class="w-3/4 mx-auto text-center py-2 border border-rose-950/50 rounded-lg bg-[#faf0f3]" style="display: none;"></span>
+        <table class="w-5/6 mx-auto table-auto border-collapse border border-slate-400" id="state-ceps">
             <thead>
                 <tr class="bg-rose-950 text-white">
+                    <th class="border border-slate-300"><%= CepStat.human_attribute_name(:state) %></th>
                     <th class="border border-slate-300"><%= CepStat.human_attribute_name(:cep) %></th>
                     <th class="border border-slate-300"><%= CepStat.human_attribute_name(:city) %></th>
-                    <th class="border border-slate-300"><%= CepStat.human_attribute_name(:state) %></th>
                     <th class="border border-slate-300">Detalhes</th>
                 </tr>
             </thead>
-            <tbody>
-                <% @most_searched_cep_stats.each do |cep_stat| %>
-                    <tr class="bg-gray-50 hover:bg-slate-200">
-                        <td class="border-x border-slate-300 pl-3"><%= cep_stat.cep %></td>
-                        <td class="border-x border-slate-300 pl-3"><%= cep_stat.city %></td>
-                        <td class="border-x border-slate-300 pl-3"><%= cep_stat.state %></td>
-                        <td class="border-x border-slate-300 text-center pb-0.5">
-                            <%= link_to 'Visualizar', cep_stat_path(cep_stat.id), class: 'hover:border-b hover:border-black font-semibold' %>
-                        </td>
-                    </tr>
-                <% end %>
-            </tbody>
+            <tbody></tbody>
         </table>
-    <% else %>
-        <span class="w-3/4 mx-auto text-center py-2 border border-rose-950/50 rounded-lg bg-[#faf0f3]">Não há CEPs pesquisados</span>
-    <% end %>
-</div>
-
-<div class="w-1/2 bg-white rounded-lg p-4 mt-4 shadow-md flex flex-col" id="most-searched-by-state">
-    <h1 class="text-2xl text-center mb-3 font-bold text-gray-800">CEP's mais buscados por estado</h1>
-    <%= form_with do |f| %>
-        <%= f.label :state, 'Estado' %>
-        <%= f.select :state, options_for_select(CepStat::STATES.map { |acronym, name| [name, acronym] }), {}, id: 'state' %>
-    <% end %>
-    <span id="message" class="w-3/4 mx-auto text-center py-2 border border-rose-950/50 rounded-lg bg-[#faf0f3]" style="display: none;"></span>
-    <table class="w-5/6 mx-auto table-auto border-collapse border border-slate-400" id="state-ceps">
-        <thead>
-            <tr class="bg-rose-950 text-white">
-                <th class="border border-slate-300"><%= CepStat.human_attribute_name(:state) %></th>
-                <th class="border border-slate-300"><%= CepStat.human_attribute_name(:cep) %></th>
-                <th class="border border-slate-300"><%= CepStat.human_attribute_name(:city) %></th>
-                <th class="border border-slate-300">Detalhes</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
+    </div>
 </div>
